fixed spacing between tags on mobile

--- a/css/experience-style.css
+++ b/css/experience-style.css
@@ -44,9 +44,9 @@ body {
 .linkedin-text {
     font-size: 16px;
     font-weight: 300;
-    padding: 5px 0px;
+    padding: 2px 0px;
     letter-spacing: 0.7px;
-    line-height: 1.5em;
+    line-height: 1.9em;
 }
 
 .linkedin-text a{
